<resources>
    <!-- App strings -->
    <string name="app_name">Assembly</string>
    <string name="title_home">Home</string>
    <string name="title_proposals">Proposals</string>
    <string name="title_review">Review</string>
    <string name="base_api_url">http://192.168.1.23:8000/api</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login/Register strings -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_national_id">National ID</string>
    <string name="hint_country">Country</string>
    <string name="hint_province">Province</string>
    <string name="hint_city">City</string>
    <string name="bttn_login">Sign in</string>
    <string name="bttn_register">Create Account</string>
    <string name="bttn_goto_login">Already a user? Login</string>
    <string name="bttn_goto_register">Not a user yet? Register</string>
    <string name="toast_login_error">Error, couldn\'t sign in</string>
    <string name="toast_register_error">Error, couldn\'t sign up</string>

    <!-- New proposal strings -->
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="bttn_create">Create New Proposal</string>
    <string name="toast_create_error">Error, couldn\'t create proposal</string>
    <string name="toast_create_success">Proposal created</string>

    <!-- Home strings -->
    <string name="banner">The new society\'s democracy tool</string>
    <string name="welcome_message">Welcome,\ </string>

    <!-- Citzen strings -->
    <string name="bttn_logout">Log out</string>
    <string name="username">\@</string>
    <string name="first_name">First Name:\ </string>
    <string name="last_name">Last Name:\ </string>
    <string name="national_id">National ID:\ </string>
    <string name="personal_info">Personal information</string>

    <!-- Vote strings -->
    <string name="toast_vote_success">Vote registered succesfully</string>
    <string name="toast_vote_error">Error, couldn\'t register the vote</string>

</resources>
