<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="org.assembly.views.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/loading_animation"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bttn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bttn_login" />

    <Button
        android:id="@+id/bttn_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:text="@string/bttn_goto_register"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>
