<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="org.assembly.views.activities.NewProposalActivity">


    <ImageButton
        android:id="@+id/input_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_black_24dp" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:maxLines="10" />

    <Button
        android:id="@+id/bttn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bttn_create" />
</LinearLayout>

