<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="org.assembly.views.activities.CitizenActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@color/primaryColor"
        android:padding="10dp">

        <ImageView
            android:id="@+id/citizen_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_image_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/citizen_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/citizen_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/citizen_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/citizen_image"
            app:layout_constraintTop_toBottomOf="@id/citizen_username" />

        <TextView
            android:id="@+id/personal_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/personal_info"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citizen_image" />

        <TextView
            android:id="@+id/citizen_national_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/national_id"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_information" />

        <TextView
            android:id="@+id/citizen_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/first_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citizen_national_id" />

        <TextView
            android:id="@+id/citizen_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/last_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citizen_first_name" />

        <Button
            android:id="@+id/bttn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="@string/bttn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/citizen_last_name" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
